# bn-edge-removal-public

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
configs/: cell_cycle10_optimal.yaml  cell_cycle10_optuna.yaml  cortical_optimal.yaml
configs/baselines/: cell_cycle10_baseline.yaml  cortical_baseline.yaml  wnt5a_baseline.yaml
configs/paper_reproducibility/: cortical_paper.yaml  wnt5a_paper.yaml
notebooks/: bn_experiment_dashboard.py  network_graph_dashboard.py  reachability_dashboard.py
scripts/: marimo_ui_check.py  marimo_ui_smoketest.py  portal_index.html  run_cell_cycle10.py  run_cortical.py  run_wnt5a.py  tune_cell_cycle10_optuna.py  verify_reachability.py
src/ai_research_template/: __init__.py
src/ai_research_template/bn_edge_removal/: __init__.py  cell_cycle10.py  cortical.py  env.py  evaluation.py  evaluation_sparse.py  network_spec.py  plotting.py  q_learning.py  q_learning_sparse.py  reachability.py  s_pombe.py  stl_monotone.py  stl_recovery.py  wnt5a.py
src/ai_research_template/bn_edge_removal/network_specs/: README.md  __init__.py  cortical.yaml  s_pombe.yaml  wnt5a.yaml
src/bn_edge_removal/: __init__.py  action_selection.py  cell_cycle10.py  cortical.py  encoding.py  env.py  evaluation.py  evaluation_sparse.py  network_spec.py  q_learning.py  q_learning_sparse.py  reachability.py  s_pombe.py  stl_monotone.py  stl_recovery.py  wnt5a.py
src/bn_edge_removal/network_specs/: cell_cycle10.yaml
tests/: test_env.py  test_reachability.py
